tests/ui/pin-ergonomics/pin_v2-attr.stderr
error: the `pin_v2` attribute cannot be used on macro calls
  --> $DIR/pin_v2-attr.rs:135:3
   |
LL | #[pin_v2]
   |   ^^^^^^
   |
   = help: the `pin_v2` attribute can only be applied to data types
   = note: placing this attribute on a macro invocation does nothing even if the macro expands to what would be a valid target for the attribute

error: allow, cfg, cfg_attr, deny, expect, forbid, and warn are the only allowed built-in attributes in function parameters
  --> $DIR/pin_v2-attr.rs:84:12
   |
LL | fn f<T, U>(#[pin_v2] param: Foo<T, U>)
   |            ^^^^^^^^^

error: the `pin_v2` attribute cannot be used on crates
  --> $DIR/pin_v2-attr.rs:10:4
   |
LL | #![pin_v2]
   |    ^^^^^^
   |
   = help: the `pin_v2` attribute can only be applied to data types

error: the `pin_v2` attribute cannot be used on type parameters
  --> $DIR/pin_v2-attr.rs:27:12
   |
LL | enum Foo<#[pin_v2] T, #[pin_v2] U = ()> {
   |            ^^^^^^
   |
   = help: the `pin_v2` attribute can only be applied to data types

error: the `pin_v2` attribute cannot be used on type parameters
  --> $DIR/pin_v2-attr.rs:27:25
   |
LL | enum Foo<#[pin_v2] T, #[pin_v2] U = ()> {
   |                         ^^^^^^
   |
   = help: the `pin_v2` attribute can only be applied to data types

error: the `pin_v2` attribute cannot be used on enum variants
  --> $DIR/pin_v2-attr.rs:30:7
   |
LL |     #[pin_v2]
   |       ^^^^^^
   |
   = help: the `pin_v2` attribute can only be applied to data types

error: the `pin_v2` attribute cannot be used on struct fields
  --> $DIR/pin_v2-attr.rs:32:20
   |
LL |     TupleVariant(#[pin_v2] T),
   |                    ^^^^^^
   |
   = help: the `pin_v2` attribute can only be applied to data types

error: the `pin_v2` attribute cannot be used on struct fields
  --> $DIR/pin_v2-attr.rs:34:11
   |
LL |         #[pin_v2]
   |           ^^^^^^
   |
   = help: the `pin_v2` attribute can only be applied to data types

error: the `pin_v2` attribute cannot be used on traits
  --> $DIR/pin_v2-attr.rs:39:3
   |
LL | #[pin_v2]
   |   ^^^^^^
   |
   = help: the `pin_v2` attribute can only be applied to data types

error: the `pin_v2` attribute cannot be used on associated consts
  --> $DIR/pin_v2-attr.rs:41:7
   |
LL |     #[pin_v2]
   |       ^^^^^^
   |
   = help: the `pin_v2` attribute can only be applied to data types

error: the `pin_v2` attribute cannot be used on associated types
  --> $DIR/pin_v2-attr.rs:43:7
   |
LL |     #[pin_v2]
   |       ^^^^^^
   |
   = help: the `pin_v2` attribute can only be applied to data types

error: the `pin_v2` attribute cannot be used on required trait methods
  --> $DIR/pin_v2-attr.rs:46:7
   |
LL |     #[pin_v2]
   |       ^^^^^^
   |
   = help: the `pin_v2` attribute can only be applied to data types

error: the `pin_v2` attribute cannot be used on provided trait methods
  --> $DIR/pin_v2-attr.rs:48:7
   |
LL |     #[pin_v2]
   |       ^^^^^^
   |
   = help: the `pin_v2` attribute can only be applied to data types

error: the `pin_v2` attribute cannot be used on trait aliases
  --> $DIR/pin_v2-attr.rs:52:3
   |
LL | #[pin_v2]
   |   ^^^^^^
   |
   = help: the `pin_v2` attribute can only be applied to data types

error: the `pin_v2` attribute cannot be used on inherent impl blocks
  --> $DIR/pin_v2-attr.rs:55:3
   |
LL | #[pin_v2]
   |   ^^^^^^
   |
   = help: the `pin_v2` attribute can only be applied to data types

error: the `pin_v2` attribute cannot be used on delegations
  --> $DIR/pin_v2-attr.rs:58:7
   |
LL |     #[pin_v2]
   |       ^^^^^^
   |
   = help: the `pin_v2` attribute can only be applied to data types

error: the `pin_v2` attribute cannot be used on inherent methods
  --> $DIR/pin_v2-attr.rs:61:7
   |
LL |     #[pin_v2]
   |       ^^^^^^
   |
   = help: the `pin_v2` attribute can only be applied to data types

error: the `pin_v2` attribute cannot be used on trait impl blocks
  --> $DIR/pin_v2-attr.rs:65:3
   |
LL | #[pin_v2]
   |   ^^^^^^
   |
   = help: the `pin_v2` attribute can only be applied to data types

error: the `pin_v2` attribute cannot be used on trait methods in impl blocks
  --> $DIR/pin_v2-attr.rs:67:7
   |
LL |     #[pin_v2]
   |       ^^^^^^
   |
   = help: the `pin_v2` attribute can only be applied to data types

error: the `pin_v2` attribute cannot be used on extern crates
  --> $DIR/pin_v2-attr.rs:71:3
   |
LL | #[pin_v2]
   |   ^^^^^^
   |
   = help: the `pin_v2` attribute can only be applied to data types

error: the `pin_v2` attribute cannot be used on use statements
  --> $DIR/pin_v2-attr.rs:74:3
   |
LL | #[pin_v2]
   |   ^^^^^^
   |
   = help: the `pin_v2` attribute can only be applied to data types

error: the `pin_v2` attribute cannot be used on statics
  --> $DIR/pin_v2-attr.rs:77:3
   |
LL | #[pin_v2]
   |   ^^^^^^
   |
   = help: the `pin_v2` attribute can only be applied to data types

error: the `pin_v2` attribute cannot be used on constants
  --> $DIR/pin_v2-attr.rs:80:3
   |
LL | #[pin_v2]
   |   ^^^^^^
   |
   = help: the `pin_v2` attribute can only be applied to data types

error: the `pin_v2` attribute cannot be used on functions
  --> $DIR/pin_v2-attr.rs:83:3
   |
LL | #[pin_v2]
   |   ^^^^^^
   |
   = help: the `pin_v2` attribute can only be applied to data types

error: the `pin_v2` attribute cannot be used on function params
  --> $DIR/pin_v2-attr.rs:84:14
   |
LL | fn f<T, U>(#[pin_v2] param: Foo<T, U>)
   |              ^^^^^^
   |
   = help: the `pin_v2` attribute can only be applied to data types

error: the `pin_v2` attribute cannot be used on closures
  --> $DIR/pin_v2-attr.rs:92:7
   |
LL |     #[pin_v2]
   |       ^^^^^^
   |
   = help: the `pin_v2` attribute can only be applied to data types

error: the `pin_v2` attribute cannot be used on expressions
  --> $DIR/pin_v2-attr.rs:94:7
   |
LL |     #[pin_v2]
   |       ^^^^^^
   |
   = help: the `pin_v2` attribute can only be applied to data types

error: the `pin_v2` attribute cannot be used on struct fields
  --> $DIR/pin_v2-attr.rs:98:11
   |
LL |         #[pin_v2]
   |           ^^^^^^
   |
   = help: the `pin_v2` attribute can only be applied to data types

error: the `pin_v2` attribute cannot be used on statements
  --> $DIR/pin_v2-attr.rs:96:7
   |
LL |     #[pin_v2]
   |       ^^^^^^
   |
   = help: the `pin_v2` attribute can only be applied to data types

error: the `pin_v2` attribute cannot be used on match arms
  --> $DIR/pin_v2-attr.rs:102:11
   |
LL |         #[pin_v2]
   |           ^^^^^^
   |
   = help: the `pin_v2` attribute can only be applied to data types

error: the `pin_v2` attribute cannot be used on pattern fields
  --> $DIR/pin_v2-attr.rs:106:15
   |
LL |             #[pin_v2]
   |               ^^^^^^
   |
   = help: the `pin_v2` attribute can only be applied to data types

error: the `pin_v2` attribute cannot be used on where predicates
  --> $DIR/pin_v2-attr.rs:88:7
   |
LL |     #[pin_v2]
   |       ^^^^^^
   |
   = help: the `pin_v2` attribute can only be applied to data types

error: the `pin_v2` attribute cannot be used on modules
  --> $DIR/pin_v2-attr.rs:112:3
   |
LL | #[pin_v2]
   |   ^^^^^^
   |
   = help: the `pin_v2` attribute can only be applied to data types

error: the `pin_v2` attribute cannot be used on foreign modules
  --> $DIR/pin_v2-attr.rs:115:3
   |
LL | #[pin_v2]
   |   ^^^^^^
   |
   = help: the `pin_v2` attribute can only be applied to data types

error: the `pin_v2` attribute cannot be used on foreign types
  --> $DIR/pin_v2-attr.rs:117:7
   |
LL |     #[pin_v2]
   |       ^^^^^^
   |
   = help: the `pin_v2` attribute can only be applied to data types

error: the `pin_v2` attribute cannot be used on foreign statics
  --> $DIR/pin_v2-attr.rs:120:7
   |
LL |     #[pin_v2]
   |       ^^^^^^
   |
   = help: the `pin_v2` attribute can only be applied to data types

error: the `pin_v2` attribute cannot be used on foreign functions
  --> $DIR/pin_v2-attr.rs:123:7
   |
LL |     #[pin_v2]
   |       ^^^^^^
   |
   = help: the `pin_v2` attribute can only be applied to data types

error: the `pin_v2` attribute cannot be used on type aliases
  --> $DIR/pin_v2-attr.rs:127:3
   |
LL | #[pin_v2]
   |   ^^^^^^
   |
   = help: the `pin_v2` attribute can only be applied to data types

error: the `pin_v2` attribute cannot be used on macro defs
  --> $DIR/pin_v2-attr.rs:130:3
   |
LL | #[pin_v2]
   |   ^^^^^^
   |
   = help: the `pin_v2` attribute can only be applied to data types

error: aborting due to 39 previous errors

